# trawl

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/: release-footer.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: fetch-rclone.sh  install.sh
src/: App.tsx  api.ts  format.ts  main.tsx  store.tsx  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  pcloud.rs  rclone.rs  scheduler.rs  store.rs  tray.rs
src/components/: Sidebar.tsx
src/sim/: catalog.ts  simApi.ts
src/tauri/: tauriApi.ts
src/views/: Connect.tsx  Dashboard.tsx  NewMapping.tsx  Run.tsx
