[package]
name = "trawl"
version = "0.1.0"
description = "Sync Google Drive & pCloud folders by link into a local library (rclone-backed)"
authors = ["Spoolr"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trawl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
# HTTP client for the pCloud public-link API (showpublink / getpublinkdownload).
# Pure-Rust TLS (rustls) so there's no system OpenSSL dependency. Used from
# spawn_blocking; downloads stream chunk-by-chunk for live progress.
ureq = { version = "2", features = ["json"] }

